fix dark mode

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit&family=Work+Sans:wght@300;500&display=swap');
 .about{
-    background-color:#E5E5F2;
     display: flex;
     height: 100vh;
     font-family: "work Sans";
